manual_train/d1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manual-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kuber
  template:
    metadata:
      labels:
        app: kuber
    spec:
      containers:
      - name: bokavets
        image: bokovets/kuber
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-manual
spec:
  selector:
    app: kuber
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
