manual_train/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kuber-app
  template:
    metadata:
      labels:
        app: kuber-app
    spec:
      containers:
      - imagePullPolicy: IfNotPresent
        name: go
        image: bokovets/kuber
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-app-service
spec:
  selector:
    app: kuber-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
