manual_train/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-app-ingress
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: test.ru
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kuber-app-service
            port: 
              number: 80
